--- a/Strategy.ipynb
+++ b/Strategy.ipynb
@@ -2408,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2417,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2554,234 +2554,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: \t1 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t2 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t3 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t4 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t5 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t6 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t7 / 50\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t64\n",
-      "Rejected: \t0\n",
-      "Iteration: \t8 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t9 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t10 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t11 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t12 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t13 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t14 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t15 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t16 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t17 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t18 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t19 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t20 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t21 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t22 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t23 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t24 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t25 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t26 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t27 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t28 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t29 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t30 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t31 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t32 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t33 / 50\n",
-      "Confirmed: \t62\n",
-      "Tentative: \t2\n",
-      "Rejected: \t0\n",
-      "Iteration: \t34 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t35 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t36 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t37 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t38 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t39 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t40 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t41 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t42 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t43 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t44 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t45 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t46 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t47 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t48 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "Iteration: \t49 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n",
-      "\n",
-      "\n",
-      "BorutaPy finished running.\n",
-      "\n",
-      "Iteration: \t50 / 50\n",
-      "Confirmed: \t63\n",
-      "Tentative: \t1\n",
-      "Rejected: \t0\n"
+     "ename": "NameError",
+     "evalue": "name 'rf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-2c58f7a0a558>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mboruta_feature_selector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBorutaPy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_estimators\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'auto'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mboruta_feature_selector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rf' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BorutaPy(estimator=RandomForestClassifier(max_depth=5, n_estimators=226,\n",
-       "                                          n_jobs=-1,\n",
-       "                                          random_state=RandomState(MT19937) at 0x1E46DB0D840),\n",
-       "         max_iter=50, n_estimators='auto',\n",
-       "         random_state=RandomState(MT19937) at 0x1E46DB0D840, verbose=2)"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
